--- a/gb/20/9/16/n12407914.md
+++ b/gb/20/9/16/n12407914.md
@@ -1,68 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bvcufi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bvcufi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bvcufi319/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bvcufi319/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉义巿监理站响应全国“交通安全周”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/83d8c7313e5b733f87b7342217f6477d-600x400.jpg" />
 <h6>	活动透过实际坐上驾驶的位置，让学生了解大型车驾驶人开车时存在视野死角的危险性及现场内轮差解说，加强学生防御驾驶及保持安全距离的安全。（嘉义市监理站提供）
 </h6>
 <hr>
-<p>【大纪元2020年09月16日讯】（大纪元记者李撷璎台湾嘉义报导）不忘将<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>概念向下札根，为响应全国“交通安全周”嘉义巿监理站于109年9月16日(周三)邀请北园国小至该站交通安全体验区体验“大型车视野死角与内轮差”潜在危险的认知及“路口停让行人安全宣导”。</p>
+<p>【大纪元2020年09月16日讯】（大纪元记者李撷璎台湾嘉义报导）不忘将<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>概念向下札根，为响应全国“交通安全周”嘉义巿监理站于109年9月16日(周三)邀请北园国小至该站交通安全体验区体验“大型车视野死角与内轮差”潜在危险的认知及“路口停让行人安全宣导”。</p>
 <p>活动透过实际坐上驾驶的位置，让学生了解大型车驾驶人开车时存在视野死角的危险性及现场内轮差解说，加强学生防御驾驶及保持安全距离的安全。并同时讲解行人穿越马路时应注意事项，除保持适当的安全距离外，更应有正确穿越马路方式，即“停、看、转、挥、动”。</p>
-<p>“停”停人行道不强行；“看”看看号志小绿人；“转”转左转右等车停；“挥”挥手微笑表谢意；“动”动身起步快步等相关<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>常识，以达教育效果。</p>
+<p>“停”停人行道不强行；“看”看看号志小绿人；“转”转左转右等车停；“挥”挥手微笑表谢意；“动”动身起步快步等相关<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E5%AE%89%E5%85%A8.md#1">交通安全</a>常识，以达教育效果。</p>
 <p>嘉义市监理站站长洪广诚表示，所谓“视野死角”是驾驶者无法由肉眼直接看到或无法藉由后视镜间接看到的视野区域称之，民众若过马路或没保持安全距离可能会不小心落入视野死角，随时会发生危险。</p>
 <p>所谓“内轮差”是车辆转弯时内侧前后轮的轨迹差，很多民众在停车等红绿灯时因常误判大型车车身长度过长而陷入危险而不自知，希望透过本次交通安全体验活动，让学生深刻了解道路安全的重要性，加强防御驾驶及正确用路人观念，以提升用路安全。</p>
-<figure id="12407920" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/09/dc167122b9a87a055847a722a65c452b-450x338.jpg" alt=" 希望透过本次交通安全体验活动，让学生深刻了解道路安全的重要性，加强防御驾驶及正确用路人观念，以提升用路安全。" width="500" /><figcaption class="wp-caption-text">希望透过本次交通安全体验活动，让学生深刻了解道路安全的重要性，加强防御驾驶及正确用路人观念，以提升用路安全。（嘉义市监理站提供）</figcaption></figure>
-<figure id="12407919" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/09/64573c092887004594201bd890784c4e-450x338.jpg" alt=" 应有正确穿越马路方式，即“停、看、转、挥、动”。" width="500" /><figcaption class="wp-caption-text">应有正确穿越马路方式，即“停、看、转、挥、动”。（嘉义市监理站提供）</figcaption></figure>
-<figure id="12407918" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/09/db40270a84c24276445c0769ea7f2dc0-450x338.jpg" alt="讲解行人穿越马路时应注意事项。" width="500" /><figcaption class="wp-caption-text">讲解行人穿越马路时应注意事项。（嘉义市监理站提供）</figcaption></figure>
-<figure id="12407916" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/09/1b1876699ff6733be06c107bc878e828-450x338.jpg" alt="解说远离大型车的重要性。" width="500" /><figcaption class="wp-caption-text">解说远离大型车的重要性。（嘉义市监理站提供）</figcaption></figure>
+<figure id="12407920" aria-describedby="caption-12407920" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/09/dc167122b9a87a055847a722a65c452b-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/09/dc167122b9a87a055847a722a65c452b-450x338.jpg" alt=" 希望透过本次交通安全体验活动，让学生深刻了解道路安全的重要性，加强防御驾驶及正确用路人观念，以提升用路安全。" width="500" /></a><figcaption id="caption-12407920" class="wp-caption-text">希望透过本次交通安全体验活动，让学生深刻了解道路安全的重要性，加强防御驾驶及正确用路人观念，以提升用路安全。（嘉义市监理站提供）</figcaption></figure>
+<figure id="12407919" aria-describedby="caption-12407919" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/09/64573c092887004594201bd890784c4e-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/09/64573c092887004594201bd890784c4e-450x338.jpg" alt=" 应有正确穿越马路方式，即“停、看、转、挥、动”。" width="500" /></a><figcaption id="caption-12407919" class="wp-caption-text">应有正确穿越马路方式，即“停、看、转、挥、动”。（嘉义市监理站提供）</figcaption></figure>
+<figure id="12407918" aria-describedby="caption-12407918" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/09/db40270a84c24276445c0769ea7f2dc0-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/09/db40270a84c24276445c0769ea7f2dc0-450x338.jpg" alt="讲解行人穿越马路时应注意事项。" width="500" /></a><figcaption id="caption-12407918" class="wp-caption-text">讲解行人穿越马路时应注意事项。（嘉义市监理站提供）</figcaption></figure>
+<figure id="12407916" aria-describedby="caption-12407916" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/09/1b1876699ff6733be06c107bc878e828-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/09/1b1876699ff6733be06c107bc878e828-450x338.jpg" alt="解说远离大型车的重要性。" width="500" /></a><figcaption id="caption-12407916" class="wp-caption-text">解说远离大型车的重要性。（嘉义市监理站提供）</figcaption></figure>
 <p>责任编辑：吕美琪</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/5/n12381460.md#1">劳工节出游旅行 州府提醒谨慎驾驶</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/7/n12385800.md#1">看的见才安全  大型车善用行车视野辅助系统</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/10/n12395178.md#1">劳工节周末乔州事故死亡人数增加，南卡减少</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/12/n12398165.md#1">充气气压如何影响轮胎磨损？</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12400677.md#1">从辽到京近千里维稳代价高 访民成官员提款机</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12404587.md#1">停让行人 “车慢行 人速行 行经路口慢看停”</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12407808.md#1">嘉义分署扣押违反居家检疫者摄影器材</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12407762.md#1">嘉义女中受灾九状况 复合式防灾演练超逼真</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12407300.md#1">捍卫国人健康 嘉市食安自治条例修正案通过</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12407309.md#1">老翁误上快速道 警员暗夜救援 化解虚惊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/5/n12381460.md#1">劳工节出游旅行 州府提醒谨慎驾驶</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/7/n12385800.md#1">看的见才安全  大型车善用行车视野辅助系统</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/10/n12395178.md#1">劳工节周末乔州事故死亡人数增加，南卡减少</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/12/n12398165.md#1">充气气压如何影响轮胎磨损？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/13/n12400677.md#1">从辽到京近千里维稳代价高 访民成官员提款机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/15/n12404587.md#1">停让行人 “车慢行 人速行 行经路口慢看停”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680487.md#1">办公室减废嘉eat点 享外送美食便利点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679209.md#1">111年嘉义优秀青年代表  参访嘉义县政府</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679216.md#1">嘉楠集团捐赠台大云林分院景观花园暨中型巴士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678761.md#1">结合紫斑蝶季 云林力推铁道观光</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/8/10/n12319003.md#1">【命理】身居高位却在晚年被斩首的命</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/2/n12375441.md#1">“墨守成规”内藏墨子和诸葛亮的伟绩</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/11/2/5/n3162043.md#1">名将遇事不慌 临乱不惊</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12406057.md#1">【新闻看点】华为断芯曝科技软肋 北京把路走绝</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12405899.md#1">【时事纵横】华为断芯 中共教授狂言“炸地球”</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12403872.md#1">【拍案惊奇】美驻华大使撤走 美中加速脱钩？</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403222.md#1">战狼变色狼？刘晓明和华春莹相继出丑</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401217.md#1">赵立坚再次被曝关注色情账号惹议</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403539.md#1">欧中在峰会上交锋 欧盟步步紧逼习近平</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12400838.md#1">与成龙有关？吴绮莉自曝女儿有已故兄弟姐妹</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12406999.md#1">黄鸿升惊传猝死 享年36岁 经纪人证实</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401048.md#1">为同父异母妹妹加油 孙俪获邓超妇唱夫和</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401224.md#1">杨颖和黄晓明穿情侣装 补税风波后首度放闪</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403678.md#1">杨超越回应演技争议 大陆演艺圈鄙视链曝光</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12402358.md#1">抬升90度？ 中共官媒秀模型飞机画面遭取笑</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/11/n12397178.md#1">吃素也得大肠癌？避2大致癌雷区 6招正确吃素</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12401895.md#1">《时代》黑边封面悼20万病故者 赞台湾防疫</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12402050.md#1">南极“末日冰川”融化速度惊人 原因被找到</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12400344.md#1">美国动物园小雪豹首度亮相 像猫一样可爱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bvcufi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bvcufi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/16/n12407914.htm">嘉义巿监理站响应全国“交通安全周”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/16/n12407914.htm">嘉义巿监理站响应全国“交通安全周”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12407914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bvcufi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bvcufi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/16/n12407914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
